[gd_scene load_steps=11 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_31.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cqv7wjlkut2rq" path="res://Art/Level/Game3Level/Level_6/hld1bg.png" id="3"]
[ext_resource type="Texture2D" uid="uid://byrvfuuxpgtgk" path="res://Art/Level/Game3Level/Level_6/hldbg.png" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(927.5, 1283)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1097.5, 1283)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(107, 1283)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1227.5, 2524.5)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(5328.5, 1550)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(781.5, 2404)
script = null

[node name="Level_31" instance=ExtResource( "1" )]
script = ExtResource( "2" )
metadata/_edit_vertical_guides_ = [1099.0]

[node name="stop1" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(1564.25, -164)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(2798.25, -165)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(3554, -163)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(5213.25, 457.75)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="floor" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(2663, 1172)
shape = SubResource( "5" )

[node name="stop5" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3208, 281)
shape = SubResource( "6" )
disabled = true
metadata/_edit_lock_ = true

[node name="End" parent="BackGround" index="0"]
motion_scale = Vector2(0.1, 0)

[node name="Hld1Bg" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(721, 268)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="Hldbg2" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(3919, 291)
texture = ExtResource( "4" )

[node name="Hldbg" type="Sprite2D" parent="BackGround/floor_2" index="1"]
position = Vector2(1411, 296)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="10"]
position = Vector2(4422, 319)
metadata/_edit_lock_ = true
